--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,15 @@
   <div id="main-container">
     <div class="headline-container">
       <h1 id="chickenBtn">
-        <svg width="22" viewBox="0 0 104 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <!-- <svg width="22" viewBox="0 0 104 72" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M60 35C60 21.1929 48.8071 10 35 10C21.1929 10 10 21.1929 10 35C10 48.8071 21.1929 60 35 60V70C15.67 70 0 54.33 0 35C0 15.67 15.67 0 35 0C54.33 0 70 15.67 70 35C70 54.33 54.33 70 35 70V60C48.8071 60 60 48.8071 60 35Z" fill="#0000FF"/>
           <path d="M94 35C94 21.1929 82.8071 10 69 10C55.1929 10 44 21.1929 44 35C44 48.8071 55.1929 60 69 60V70C49.67 70 34 54.33 34 35C34 15.67 49.67 0 69 0C88.33 0 104 15.67 104 35C104 54.33 88.33 70 69 70V60C82.8071 60 94 48.8071 94 35Z" fill="#0000FF"/>
+        </svg> -->
+        <svg width="22" viewBox="0 0 104 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M61 35C61 20.6406 49.3594 9 35 9C20.6406 9 9 20.6406 9 35C9 49.3594 20.6406 61 35 61V70C15.67 70 0 54.33 0 35C0 15.67 15.67 0 35 0C54.33 0 70 15.67 70 35C70 54.33 54.33 70 35 70V61C49.3594 61 61 49.3594 61 35Z" fill="#0000FF"/>
+          <path d="M95 35C95 20.6406 83.3594 9 69 9C54.6406 9 43 20.6406 43 35C43 49.3594 54.6406 61 69 61V70C49.67 70 34 54.33 34 35C34 15.67 49.67 0 69 0C88.33 0 104 15.67 104 35C104 54.33 88.33 70 69 70V61C83.3594 61 95 49.3594 95 35Z" fill="#0000FF"/>
         </svg>
+
 
 
         LANGPUSH
@@ -92,10 +97,10 @@
       <div class="last-notification-header">
         <button id="historyBtn" style="display: none;" class="history-button">
           <span class="history-normal-state">
-            <i data-lucide="clock-8" class="ios-icon"></i>
+            <i data-lucide="circle-arrow-up" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
           </span>
           <span class="history-loading-state" style="display: none;">
-            <i data-lucide="loader" class="ios-icon rotating"></i>
+            <i data-lucide="loader" class="ios-icon rotating" style="padding:9px;"></i>
           </span>
         </button>
       </div>
