updated lang pairs + speaker icon test

--- a/public/index.html
+++ b/public/index.html
@@ -105,9 +105,14 @@
         </button>
       </div>
       <div class="english"></div>
-      <div class="original">
-        <div class="reveal-text" style="display: none;">Reveal</div>
-        <div class="actual-text"></div>
+      <div class="original-container">
+        <div class="original">
+          <div class="reveal-text" style="display: none;">Reveal</div>
+          <div class="actual-text"></div>
+        </div>
+        <button class="speak-button" style="display: none;">
+          <i data-lucide="volume-2" class="ios-icon"></i>
+        </button>
       </div>
     </div>
 
@@ -164,6 +169,7 @@
   <script src="/js/config.js"></script>
   <script src="/js/popover.js"></script>
   <script src="/js/utils.js"></script>
+  <script src="/js/speech-manager.js"></script>
   <script src="/js/capacitor-manager.js"></script>
   <script src="/js/subscription-manager.js"></script>
   <script src="/js/ui-controller.js"></script>
