--- a/public/index.html
+++ b/public/index.html
@@ -108,11 +108,13 @@
       <div class="original-container">
         <div class="original">
           <div class="reveal-text" style="display: none;">Reveal</div>
-          <div class="actual-text"></div>
+          <div class="actual-text-container">
+            <div class="actual-text"></div>
+            <button class="speak-button" style="display: none;">
+              <i data-lucide="audio-lines" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
+            </button>
+          </div>
         </div>
-        <button class="speak-button" style="display: none;">
-          <i data-lucide="volume-2" class="ios-icon"></i>
-        </button>
       </div>
     </div>
 
@@ -170,6 +172,7 @@
   <script src="/js/popover.js"></script>
   <script src="/js/utils.js"></script>
   <script src="/js/speech-manager.js"></script>
+  <script src="/js/dev-tools.js"></script>
   <script src="/js/capacitor-manager.js"></script>
   <script src="/js/subscription-manager.js"></script>
   <script src="/js/ui-controller.js"></script>
