--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
 
   <!-- Theme -->
   <meta name="theme-color" content="#f9f9f9" />
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=TikTok+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="/css/popover.css" />
@@ -35,7 +41,6 @@
           <path d="M61 35C61 20.6406 49.3594 9 35 9C20.6406 9 9 20.6406 9 35C9 49.3594 20.6406 61 35 61V70C15.67 70 0 54.33 0 35C0 15.67 15.67 0 35 0C54.33 0 70 15.67 70 35C70 54.33 54.33 70 35 70V61C49.3594 61 61 49.3594 61 35Z" fill="#0000FF"/>
           <path d="M95 35C95 20.6406 83.3594 9 69 9C54.6406 9 43 20.6406 43 35C43 49.3594 54.6406 61 69 61V70C49.67 70 34 54.33 34 35C34 15.67 49.67 0 69 0C88.33 0 104 15.67 104 35C104 54.33 88.33 70 69 70V61C83.3594 61 95 49.3594 95 35Z" fill="#0000FF"/>
         </svg>
-        LANGPUSH
       </h1>
       <!-- <div id="github">
         <a href='https://github.com/itymarcel/langpush' target='_blank'>
@@ -63,7 +68,7 @@
     <div id="language-container">
       <div style="display: flex; align-items: center; justify-content: center; gap: 4px; margin-bottom:8px;">
         <label for="language-select">
-          Choose language
+          Language
         </label>
       </div>
       <div class="selection-container">
@@ -94,7 +99,7 @@
       <div class="last-notification-header">
         <button id="historyBtn" style="display: none;" class="history-button">
           <span class="history-normal-state">
-            <i data-lucide="watch" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
+            <i data-lucide="squirrel" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
              <!-- <div style="width:18px; height:18px; border:2px solid black; border-radius: 999px;"></div> -->
           </span>
           <span class="history-loading-state" style="display: none;">
@@ -141,7 +146,7 @@
         <i data-lucide="bell" class="ios-icon"></i> Subscribe to 3 / day
       </span>
       <span class="unsub-state" style="display: none;">
-        <i data-lucide="bell-off" class="ios-icon"></i> Unsub
+        <i data-lucide="bell-off" class="ios-icon" style="display: none;"></i> Unsub
       </span>
       <span class="loading-state" style="display: none;">
         <i data-lucide="loader" class="ios-icon rotating blue-text"></i>
