--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
           <path d="M61 35C61 20.6406 49.3594 9 35 9C20.6406 9 9 20.6406 9 35C9 49.3594 20.6406 61 35 61V70C15.67 70 0 54.33 0 35C0 15.67 15.67 0 35 0C54.33 0 70 15.67 70 35C70 54.33 54.33 70 35 70V61C49.3594 61 61 49.3594 61 35Z" fill="#0000FF"/>
           <path d="M95 35C95 20.6406 83.3594 9 69 9C54.6406 9 43 20.6406 43 35C43 49.3594 54.6406 61 69 61V70C49.67 70 34 54.33 34 35C34 15.67 49.67 0 69 0C88.33 0 104 15.67 104 35C104 54.33 88.33 70 69 70V61C83.3594 61 95 49.3594 95 35Z" fill="#0000FF"/>
         </svg>
+        LANGPUSH
       </h1>
       <!-- <div id="github">
         <a href='https://github.com/itymarcel/langpush' target='_blank'>
@@ -66,7 +67,7 @@
     </div>
 
     <div id="language-container">
-      <div style="display: flex; align-items: center; justify-content: center; gap: 4px; margin-bottom:8px;">
+      <div style="display: none; align-items: center; justify-content: center; gap: 4px; margin-bottom:9px;">
         <label for="language-select">
           Language
         </label>
@@ -99,7 +100,7 @@
       <div class="last-notification-header">
         <button id="historyBtn" style="display: none;" class="history-button">
           <span class="history-normal-state">
-            <i data-lucide="squirrel" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
+            <i data-lucide="circle-arrow-up" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
              <!-- <div style="width:18px; height:18px; border:2px solid black; border-radius: 999px;"></div> -->
           </span>
           <span class="history-loading-state" style="display: none;">
@@ -117,7 +118,7 @@
         </div>
       </div>
       <button class="speak-button" style="display: none;">
-        <i data-lucide="audio-lines" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px;"></i>
+        <i data-lucide="audio-waveform" class="ios-icon" style="width: 18px; height: 18px; stroke-width:2px; margin-top:3px;"></i>
       </button>
     </div>
 
